trunk/Archive2/df/394a2ab1673432/output
main.cpp:5:6: error: expected ‘}’ before ‘;’ token
     X;
      ^
main.cpp:6:5: error: ‘Y’ does not name a type
     Y;
     ^
main.cpp:7:5: error: ‘Z’ does not name a type
     Z;
     ^
main.cpp:8:1: error: expected declaration before ‘}’ token
 };
 ^
